// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/settings.js should handle HAS_STARRED.SUCCESS 1`] = `
Immutable.Map {
  openAtStartup: false,
  hasStarred: true,
  showNotifications: true,
  showSettingsModal: false,
  closeOnClick: false,
  participating: false,
  playSound: true,
  markOnClick: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle HAS_STARRED.SUCCESS 2`] = `
Immutable.Map {
  openAtStartup: false,
  hasStarred: false,
  showNotifications: true,
  showSettingsModal: false,
  closeOnClick: false,
  participating: false,
  playSound: true,
  markOnClick: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle TOGGLE_SETTINGS_MODAL 1`] = `
Immutable.Map {
  openAtStartup: false,
  hasStarred: false,
  showNotifications: true,
  showSettingsModal: true,
  closeOnClick: false,
  participating: false,
  playSound: true,
  markOnClick: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle UPDATE_SETTING 1`] = `
Immutable.Map {
  openAtStartup: false,
  hasStarred: false,
  showNotifications: true,
  showSettingsModal: false,
  closeOnClick: false,
  participating: true,
  playSound: true,
  markOnClick: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should handle UPDATE_SETTING 2`] = `
Immutable.Map {
  openAtStartup: true,
  hasStarred: false,
  showNotifications: true,
  showSettingsModal: false,
  closeOnClick: false,
  participating: false,
  playSound: true,
  markOnClick: false,
  showAppIcon: "both",
}
`;

exports[`reducers/settings.js should return the initial state 1`] = `
Immutable.Map {
  openAtStartup: false,
  hasStarred: false,
  showNotifications: true,
  showSettingsModal: false,
  closeOnClick: false,
  participating: false,
  playSound: true,
  markOnClick: false,
  showAppIcon: "both",
}
`;
